# flow-lenia

./: .gitignore  BENCH.md  BROWSER_COMPAT.md  CLAUDE.md  Cargo.toml  DESIGN.md  JAX_NOTES.md  README.md  clippy.toml  rust-toolchain.toml
.claude/agents/: adversarial-reviewer.md  scope-guardian.md
crates/flow-lenia-app/: Cargo.toml
crates/flow-lenia-app/src/: lib.rs  render_terminal.rs
crates/flow-lenia-core/: Cargo.toml
crates/flow-lenia-core/src/: affinity.rs  alpha.rs  config.rs  convolve.rs  flow.rs  growth.rs  kernel.rs  lib.rs  overlap.rs  params.rs  reintegrate.rs  simulator.rs  sobel.rs  state.rs  step.rs
crates/flow-lenia-core/tests/: jax_fixture_smoke.rs  m1_regression.rs  mass_conservation_1k.rs
crates/flow-lenia-core/tests/common/: mod.rs
crates/flow-lenia-gpu/: Cargo.toml
crates/flow-lenia-gpu/src/: activation_buffer.rs  config_border.rs  globals.rs  kernel_buffers.rs  lib.rs  pipeline.rs  readback.rs  texture_readback.rs  validation.rs
crates/flow-lenia-gpu/src/passes/: affinity_growth.rs  convolve.rs  convolve_fft.rs  fft.rs  flow.rs  gradient.rs  kernel_fft.rs  mod.rs  parameter_flow.rs  parameter_map.rs  reintegrate.rs  spectral_multiply.rs  visualize.rs
crates/flow-lenia-gpu/src/shaders/: affinity_growth_constant.wgsl  affinity_growth_localized.wgsl  convolve.wgsl  fft_1d_radix2x4.wgsl  fft_1d_radix2x4_inv_to_pre_g.wgsl  fft_1d_radix2x4_v.wgsl  fft_1d_radix4.wgsl  fft_1d_radix4_inv_to_pre_g.wgsl  fft_1d_radix4_v.wgsl  fft_complex_to_pre_g.wgsl  flow.wgsl  gradient_a_sum.wgsl  gradient_u.wgsl  parameter_flow.wgsl  reintegrate.wgsl  spectral_multiply.wgsl  types.wgsl  visualize.wgsl
crates/flow-lenia-gpu/tests/: diagnose_divergence.rs  gpu_snapshot_regression.rs  heap_regression.rs  m1_regression_gpu.rs  perf_regression.rs  validation_smoke.rs  visualize_test.rs
crates/flow-lenia-gpu/tests/common/: mod.rs
crates/flow-lenia-ui/: Cargo.toml
crates/flow-lenia-ui/src/: lib.rs
crates/flow-lenia-web/: Cargo.toml  index.html
crates/flow-lenia-web/src/: lib.rs
docs/: M6_C2_4_creature_design.md  M6_literature_survey.md  known-issues.md  overnight_log.md
papers/: 2018.txt  2023.txt  2025.txt
references/: JAX_NOTES.md
scripts/: generate_jax_fixtures.py
tests/fixtures/: manifest.json
tests/regression_fixtures/gpu_baseline/: manifest.json
tests/regression_fixtures/m1_baseline/: manifest.json
