[workspace]
resolver = "2"
members = [
    "crates/flow-lenia-core",
    "crates/flow-lenia-gpu",
    "crates/flow-lenia-ui",
    "crates/flow-lenia-app",
    "crates/flow-lenia-web",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.76"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ponyo877/flow-lenia"
authors = ["ponyo877 <877ponyo@gmail.com>"]

[workspace.dependencies]
flow-lenia-core = { path = "crates/flow-lenia-core" }
flow-lenia-gpu = { path = "crates/flow-lenia-gpu" }
flow-lenia-ui = { path = "crates/flow-lenia-ui" }

bytemuck = { version = "1.16", features = ["derive"] }
glam = "0.29"
ndarray = "0.16"
rand = "0.8"
rand_chacha = "0.3"
approx = "0.5"

# wgpu / winit upgraded together with egui 0.34 (M4.0.5, 2026-05-18):
# egui-wgpu 0.34.x is pinned to wgpu 29, so the workspace tracks 29
# uniformly. winit moved to a specific patch (0.30.13) for the version
# egui-winit 0.34.x's optional dep targets — keeps a single
# ApplicationHandler ABI across egui / native / web.
wgpu = "29"
winit = "0.30.13"
pollster = "0.4"
log = "0.4"
env_logger = "0.11"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
