[package]
name = "flow-lenia-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
# `cargo run --release` (without `--bin`) from the workspace root and
# `cargo run --release --bin native_gpu` both work once this is set.
# Otherwise cargo complains about either no default target or no
# default-run binary in the package when invoked workspace-wide.
default-run = "native_gpu"

[lints]
workspace = true

[[bin]]
name = "native_cpu"
path = "src/bin/native_cpu.rs"

[[bin]]
name = "native_gpu"
path = "src/bin/native_gpu.rs"

[[bin]]
name = "generate_m1_fixtures"
path = "src/bin/generate_m1_fixtures.rs"

[[bin]]
name = "bench_step"
path = "src/bin/bench_step.rs"

[dependencies]
flow-lenia-core.workspace = true
flow-lenia-gpu.workspace = true
flow-lenia-ui.workspace = true
wgpu.workspace = true
winit.workspace = true
pollster.workspace = true
env_logger.workspace = true
log.workspace = true
