[package]
name = "flow-lenia-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
ndarray.workspace = true
rand.workspace = true
bytemuck.workspace = true

[dev-dependencies]
approx.workspace = true
rand_chacha.workspace = true
