[package]
name = "flow-lenia-gpu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
flow-lenia-core.workspace = true
wgpu.workspace = true
bytemuck.workspace = true
glam.workspace = true
log.workspace = true
ndarray.workspace = true
pollster.workspace = true

[dev-dependencies]
rand.workspace = true
rand_chacha.workspace = true
# Pinned to 0.24.x so we stay compatible with rust-toolchain.toml's
# 1.87.0; image 0.25 requires 1.88+.
image = { version = "0.24", default-features = false, features = ["png"] }
