[package]
name = "flow-lenia-gpu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
flow-lenia-core.workspace = true
wgpu.workspace = true
bytemuck.workspace = true
glam.workspace = true
log.workspace = true
ndarray.workspace = true
pollster.workspace = true

[dev-dependencies]
rand.workspace = true
rand_chacha.workspace = true
# Pinned to 0.24.x so we stay compatible with rust-toolchain.toml's
# 1.87.0; image 0.25 requires 1.88+.
image = { version = "0.24", default-features = false, features = ["png"] }
# M6.A.8 heap regression — `#[global_allocator]` wrapper that records
# current / peak heap usage. dev-only so production binaries
# (`flow-lenia-app`, `flow-lenia-web`) keep the system allocator.
peak_alloc = "0.3"
# M6.C-1-1 FFT primitive — CPU reference for forward-FFT bit-equal
# comparison tests. dev-only; the GPU implementation is hand-written
# WGSL in `src/shaders/fft_1d_radix4.wgsl`. `num-complex` is rustfft's
# input/output type and is pulled in transitively as a dev-dep only.
rustfft = "6"
