[package]
name = "flow-lenia-gpu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
flow-lenia-core.workspace = true
wgpu.workspace = true
bytemuck.workspace = true
glam.workspace = true
log.workspace = true
ndarray.workspace = true
pollster.workspace = true
# Promoted from dev-deps to regular deps for precompute_kernel_ffts:
# the GPU `Fft2dPass::forward_2d` path uses `device.poll(PollType::Wait)`
# + sync `mpsc::recv` which hangs forever on the web target (the JS
# main thread can't block). Switching the one-shot kernel precompute
# to CPU-side `rustfft` resolves the hang without touching the per-
# step GPU path. Bundle cost: ~50-100 KB to the wasm — acceptable
# given it unblocks Auto→Fft routing in the browser at N=64/256/512.
rustfft = "6"

[dev-dependencies]
rand.workspace = true
rand_chacha.workspace = true
# Pinned to 0.24.x so we stay compatible with rust-toolchain.toml's
# 1.87.0; image 0.25 requires 1.88+.
image = { version = "0.24", default-features = false, features = ["png"] }
# M6.A.8 heap regression — `#[global_allocator]` wrapper that records
# current / peak heap usage. dev-only so production binaries
# (`flow-lenia-app`, `flow-lenia-web`) keep the system allocator.
peak_alloc = "0.3"
# (rustfft was previously dev-only for forward-FFT bit-equal tests;
# promoted to regular dep above for the web-compatible kernel
# precompute path. The reference still loads via the regular dep so
# tests need no extra dependency line here.)
