[package]
name = "flow-lenia-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

# `cdylib` produces the `.wasm` binary that `wasm-bindgen` instruments
# and `trunk` then bundles. `rlib` lets `cargo check`/`clippy` see this
# crate as a normal Rust library on the host toolchain so we get
# diagnostics even without targeting wasm32.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flow-lenia-core.workspace = true
flow-lenia-gpu.workspace = true
# WGSL only on the web — WebGPU is the backend, no Metal/Vulkan need
# enabling. `default-features = false` strips out backend crates we
# don't ship in WASM.
# Keep `default-features = false` here — workspace.dependencies.wgpu
# is the full backend bundle for native crates, but the WASM build
# wants only the `webgpu` + `wgsl` features. cargo doesn't allow
# overriding default-features through `workspace = true` (see warning
# in wgpu 29 toolchain), so this crate pins its own wgpu line.
wgpu = { version = "29", default-features = false, features = ["webgpu", "wgsl"] }
# M4.1: egui directly (no eframe wrapper). 0.34 ships with wgpu 29
# support (`egui-wgpu`) and a winit-0.30 `ApplicationHandler` shim
# (`egui-winit`). The native binary stays egui-free in M4.
egui = "0.34"
egui-wgpu = "0.34"
# egui-winit's defaults pull in arboard / smithay-clipboard / x11 /
# wayland (clipboard + Linux backends), none of which compile for
# wasm32. Keep them off, opt back into the wasm-safe subset.
egui-winit = { version = "0.34", default-features = false, features = ["links", "webbrowser", "bytemuck"] }
# M4.2 screenshot: encode the readback bytes as PNG. Chrome WebGPU's
# `canvas.toBlob` returns a black image (the wgpu surface texture is
# not readable through the 2D canvas pipeline), so we render to an
# offscreen Rgba8Unorm texture, copy it to a staging buffer, map_async,
# and feed the bytes to the `png` encoder here. `default-features = false`
# strips other image formats; pulling only PNG keeps the wasm bundle
# slim (≈ 200 KB before wasm-opt).
image = { version = "0.24", default-features = false, features = ["png"] }
futures-channel = "0.3"
bytemuck = { workspace = true }
winit.workspace = true
wasm-bindgen = "0.2.120"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "HtmlCanvasElement",
    # M4.2: screenshot button — canvas.toBlob → object URL → synthetic
    # <a download> click → revoke. Each line below maps to one of those
    # interop hops.
    "Blob",
    "Url",
    "HtmlAnchorElement",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
log = "0.4"
console_log = "1.0"
# `web_time::Instant` matches the native `std::time::Instant` API but
# delegates to `performance.now()` under wasm32-unknown-unknown, so the
# FPS counter doesn't need a target-cfg branch.
web-time = "1.1"
